fix: tab order of buttons shall follow visible order (CXSPA-4796) (#17871)

--- a/feature-libs/quote/styles/_quote-actions-by-role.scss
+++ b/feature-libs/quote/styles/_quote-actions-by-role.scss
@@ -6,7 +6,7 @@
     .cx-ghost-actions {
       width: 100%;
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: column;
       gap: 1em;
     }
 
